# RET-Assessor

./: .env.example  .gitignore  BACKLOG.md  DATA_SOURCES.md  DECISIONS.md  KNOWN_LIMITS.md  PHASE0_DIFFERENTIATION.md  Procfile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
Project Notes/: Assessment_Screener_Project_Brief.docx  NYC_Assessment_Screener_Roadmap.md.docx
config/: comp_criteria.json
docs/: COMP_VALIDATION.md  INPUT_SPEC.md  RUNG3_VALIDATION.md  STATS_VALIDATION.md  VARIANCE_VALIDATION.md
docs/api_contracts/: README.md  class2_route.md  custom_comps.md  land_valuation.md
hooks/: README.md  pre-commit
phase2/: PHASE2_QUERIES.md  PHASE2_RESULTS.md  run_phase2.py
render_check/: FALLBACK_VERIFICATION.md
scripts/: diag_lowrise_bucket.py  render_check.py  validate_comps.py  validate_geocode.py  validate_rung3.py  validate_stats.py  validate_tiered.py  validate_variance.py
sources/: nyc_sources.json  nyc_sources_companion.md
src/screener/: __init__.py  abatements.py  api.py  bootstrap.py  comps.py  config.py  custom_comps.py  exemptions.py  expense_ratio.py  geocode.py  loader.py  (+12 more)
tests/: test_abatements.py  test_api.py  test_bootstrap.py  test_comps.py  test_custom_comps.py  test_dispersion.py  test_expense_ratio.py  test_formatting.py  test_geocode.py  test_industrial_comps.py  test_loader.py  test_phase_in.py  test_pluto.py  test_radius_and_ui.py  test_reconciliation.py  test_retail_classifier.py  test_retail_comps.py  test_rung3.py  test_schema.py  test_stats.py  test_taxable_series.py  test_variance.py
(+9 files in other folders)
