[project]
name = "nyc-assessment-screener"
version = "0.1.0"
description = "Deterministic NYC class-4 commercial assessment comp screener"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
